--- a/assets/css/proveedores.css
+++ b/assets/css/proveedores.css
@@ -94,3 +94,45 @@
     width: 1200px;
     height: 550px;
 }
+
+.page-proveedores .container-create-button {
+    margin-top: 30px;
+}
+
+.page-proveedores .container-create-button .create-button {
+    padding: 10px 20px;
+    font-size: 20px;
+    font-weight: 600;
+    color: #fff;
+    background-color: #6668C5;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.page-proveedores .container-create-button .create-button:hover {
+    background-color: #99A5E0;
+}
+
+.content-info form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 15px;
+}
+
+.content-info .form-row {
+    width: 100%;
+    display: flex;
+    gap: 30px;
+}
+
+input[type="text"], input[type="email"] {
+    width: 45%;
+    outline: none;
+    padding: 8px;
+    font-size: 18px;
+    font-weight: 600;
+    border: 1px solid #dfdede;
+    border-radius: 8px;
+}
