Se agrego el boton de crear y modal con el formulario de productos

--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -105,3 +105,81 @@
     height: 550px;
 }
 
+.btn-add-product {
+    width: 120px;
+    height: 40px;
+    background-color: #6668c5;
+    color: #f1f5fc;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-size: 20px;
+    gap: 5px;
+    margin-top: 10px;
+}
+
+.icon-btn-add {
+    width: 26px;
+    height: 26px;
+}
+
+#product-form {
+    display: flex;
+    gap: 15px;
+ }
+ 
+ .container-form-modal{
+    margin: 10px ;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+ }
+ .input-modal-product {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 16px;
+    color: #333;
+    transition: border-color 0.3s;
+ }
+ 
+ .input-modal-product::placeholder {
+    color: #888;
+    font-weight: bold;
+ }
+ 
+ .content-buttons-product {
+    display: flex;
+    justify-content: end;
+    margin-top: 10px;
+ }
+ 
+ .btn-modal {
+    margin: 10px 5px;
+    text-align: center;
+    font-size: 16px;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 10px 25px ;
+    transition: background-color 0.3s;
+ }
+ 
+ .button-cancel-product {
+    background-color: #dc3545;
+    color: white;
+ }
+ .button-cancel-product:hover {
+    background-color: #c82333;
+ }
+ 
+ .button-confirm-product {
+    background-color: #5555ad;
+    color: white;
+ }
+ .button-confirm-product:hover {
+    background-color: #5050c7;
+ }
