--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -105,8 +105,7 @@
     height: 550px;
 }
 
-/*estilos btn crear producto*/
-.page-productos .container-productos .content-info .btn-add-product {
+.page-productos .container-header .content-info .btn-add-product {
     width: 120px;
     height: 40px;
     background-color: #6668c5;
@@ -121,43 +120,58 @@
     margin-top: 10px;
 }
 
-.page-productos .container-productos .content-info .btn-add-product .icon-btn-add {
+.page-productos .container-header .content-info .btn-add-product .icon-btn-add {
     width: 26px;
     height: 26px;
 }
 
-/*formulario de add products*/
-.content-modal .content-modal-container .content-info .product-form {
-    display: flex;
-    gap: 15px;
- }
- 
- .content-modal .content-modal-container .content-info .product-form .container-form-modal{
-    margin: 10px ;
+.content-modal .content-modal-container .content-form {
     display: flex;
     flex-direction: column;
-    gap: 15px;
- }
- .content-modal .content-modal-container .content-info .product-form .container-form-modal .input-modal-product {
-    width: 100%;
-    padding: 12px;
-    border: 1px solid #ddd;
+    overflow: hidden;
+}
+
+.content-modal .content-modal-container .content-form .container-product {
+    display: flex;
+}
+
+.content-modal .content-modal-container .content-form .container-product .column {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+}
+
+.content-modal .content-modal-container .content-form .container-product .column .input-product {
+    width: 90%;
+    height: 30px;
+    padding: 20px 10px;
+    border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
-    color: #333;
-    transition: border-color 0.3s;
- }
- 
- .content-modal .content-modal-container .content-info .product-form .container-form-modal .input-modal-product  .input-modal-product::placeholder {
-    color: #888;
+}
+
+.content-modal .content-modal-container .content-form .container-product .column .input-product::placeholder {
     font-weight: bold;
- }
- 
- .content-modal .content-modal-container .content-buttons-product {
+
+}
+.content-modal .content-modal-container .content-form .container-product .column .date{
+    height: 30px;
+    font-size: 16px;
+    font-family: sans-serif;    
+}
+
+.content-modal .content-modal-container .content-form .container-product .column .textarea {
+    resize: none;
+    height: 160px;
+    font-size: 16px;
+    font-family: sans-serif;
+}
+.content-modal .content-modal-container .content-buttons-product{
     display: flex;
     justify-content: end;
-    margin-top: 10px;
- }
+    padding-right: 20px;
+}
  
  .content-modal .content-modal-container .content-buttons-product .btn-modal {
     margin: 10px 5px;
@@ -166,8 +180,8 @@
     border-radius: 5px;
     font-weight: bold;
     cursor: pointer;
-    padding: 10px 25px ;
-    transition: background-color 0.3s;
+    padding: 10px 25px;
+    display: flex;
  }
  
  .content-modal .content-modal-container .content-buttons-product .button-cancel-product {
@@ -182,6 +196,6 @@
     background-color: #5555ad;
     color: white;
  }
- .content-modal .content-modal-container .content-buttons-product  .button-confirm-product:hover {
+ .content-modal .content-modal-container .content-buttons-product .button-confirm-product:hover {
     background-color: #5050c7;
  }
