--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -101,4 +101,67 @@
     height: 25px;
 }
 
+.content-modal .content-modal-container .content-info-empleados{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
 
+.content-modal .content-modal-container .content-info-empleados .content-modal-form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.content-modal .content-modal-container .content-info-empleados .content-input-form{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.content-modal .content-modal-container .content-info-empleados .content-input-form input{
+    width: 100%;
+    height: 30px;
+    outline: none;
+    border: 2px solid rgb(212, 212, 212);
+    border-radius: 5px;
+    padding-left: 5px;
+}
+
+.content-modal .content-modal-container .content-info-empleados .content-input-form input::placeholder{
+    font-weight: bold;
+    color: rgb(172, 168, 168);
+}
+
+.content-modal .content-modal-container .content-info-empleados .content-input-form2{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.content-modal .content-modal-container .content-info-empleados .content-input-form2 .content-input{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.content-modal .content-modal-container .content-info-empleados .content-input-form2 input{
+    width: 100%;
+    height: 30px;
+    outline: none;
+    border: 2px solid rgb(212, 212, 212);
+    border-radius: 5px;
+    display: flex;
+    gap: 10px;
+    padding-left: 5px;
+}
+
+.content-modal .content-modal-container .content-info-empleados .content-input-form2 input::placeholder{
+    font-weight: bold;
+    color: rgb(172, 168, 168);
+}
