--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -438,7 +438,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 10px;/* aqui*15*/
+    padding-top: 10px;
     position: relative;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
@@ -472,6 +472,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
+    position: relative; 
 }
 
 .component-menu .menu-options .option svg {
@@ -485,6 +486,29 @@
 .component-menu .menu-options .option:hover svg {
     stroke: #99A5E0;
     transform: scale(1.1);
+}
+
+.component-menu .menu-options .option::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    left: 100%;
+    transform: translateX(-10%);
+    background-color: #333;
+    color: white;
+    font-size: 12px;
+    padding: 5px;
+    border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    white-space: nowrap;
+    z-index: 10; 
+}
+
+.component-menu .menu-options .option:hover::after {
+    opacity: 1;
+    visibility: visible;
 }
 
 
