--- a/assets/css/ventas.css
+++ b/assets/css/ventas.css
@@ -8,28 +8,38 @@
     overflow-y: auto;
 }
 
-.content-sales .header-sales{
-    width: 100%;
-    height: 80px;
-    display: flex;
-    font-size: 30px;
-    font-weight: 600;
-}
-
 .content-sales .content-info{
     display: flex;
     flex-direction: row;
     width: 100%;
-    gap: 20px;
+    gap: 30px;
 }
 
-.content-sales .content-info .content-1{
-    width: 65%;
-
+.content-sales .content-info .container .content-1{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-top: -50px;
+    padding-left: 10px;
 }
 
-.content-sales .content-info .content-1 .container .table-sales{
+.content-sales .content-info .container .content-1 .content-1-header{
+    width: 100%;
+    height: 60px;
+    display: flex;
+    font-size: 30px;
+    font-weight: 600;
+    padding-left: 8px;
+    padding-top: -30px;
+}
+
+.content-sales .content-info .container .content-1 .table-sales{
     min-width: 750px;
+    margin-top: -10px;
+    margin-top: 0px; 
+    margin-left: auto; 
+    margin-right: 0px; 
 }
 
 
@@ -90,7 +100,6 @@
     gap: 15px;
 }
 
-
 .content-sales .content-info .content-2 .content-info-total .content-2-button .btn{
     width: 50%;
     height: 50px;
@@ -99,7 +108,6 @@
     font-weight: 600;
     font-size: 17px;
 }
-
 
 .content-sales .content-info .content-2 .content-info-total .content-2-button .btn-cancelar{
     border: 2.5px solid #5555AD;
@@ -123,7 +131,7 @@
 }
 
 .content-sales .content-info .content-2 .product-info {
-    max-height: 300px; /* Ajusta esta altura según necesites */
+    max-height: 300px; 
     overflow-y: auto;
 }
 
@@ -178,3 +186,20 @@
     text-align: center;
     align-items: center;
 }
+
+.content-sales .content-info .container .content-1 .table-sales th, .content-sales .content-info .container .content-1 .table-sales td { 
+    padding: 8px; 
+    text-align: center; 
+}
+
+.content-sales .content-info .content-2 .content-info-total .content-2-button .btn-cancelar:hover {
+    background-color: #5555AD;
+    color: white;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.content-sales .content-info .content-2 .content-info-total .content-2-button .btn-confirmar:hover {
+    background-color: #404080;
+    transition: background-color 0.3s;
+}
+
