--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 @import url('./modal.css');
 @import url('./proveedores.css');
 @import url('./filter.css');
+@import url('./reportes.css');
 /* estilos de aside del login */
 
 .container-aside-login {
