--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -165,3 +165,29 @@
     font-weight: bold;
     color: rgb(172, 168, 168);
 }
+
+.content-modal .content-modal-container .content-info-empleados .content-input-form2 select {
+    width: 100%;
+    height: 30px;
+    outline: none;
+    border: 2px solid rgb(212, 212, 212);
+    border-radius: 5px;
+    padding-left: 5px;
+    background-color: #f5f5f5;
+    color: #666;
+}
+
+.content-modal .content-modal-container .content-info-empleados .content-input-form2 select::placeholder {
+    font-weight: bold;
+    color: rgb(172, 168, 168);
+}
+
+.content-modal .content-modal-container .content-info-empleados .content-input-form2 select option {
+    background-color: #f5f5f5;
+    color: #666;
+}
+
+.content-modal .content-modal-container .content-info-empleados .content-input-form2 select option[value=""] {
+    color: rgb(172, 168, 168);
+    font-weight: bold;
+}
