--- a/assets/css/proveedores.css
+++ b/assets/css/proveedores.css
@@ -137,29 +137,32 @@ input[type="text"], input[type="email"] {
     border-radius: 8px;
 }
 
-.content-modal .content-form .content-buttons-suppliers .button-cancel{
-    background-color: rgb(244, 55, 55);
-}
 
-.content-modal .content-form .content-buttons-suppliers .button-confirm{
-    background-color: rgb(74, 148, 245);
-}
-
-.content-modal .content-form .content-buttons-suppliers .button-cancel:hover{
-    background-color: rgb(248, 35, 35);
-}
-
-.content-modal .content-form .content-buttons-suppliers .button-confirm:hover{
-    background-color: rgb(29, 120, 240);
-}
-
-.content-modal .content-modal-container .content-buttons-suppliers{
+.content-modal-edit .content-modal-container .content-buttons-suppliers{
     display: flex;
     justify-content: end;
     padding-right: 20px;
 }
- 
- .content-modal .content-modal-container .content-buttons-suppliers .btn-modal {
+
+.content-modal-edit .content-modal-container .content-buttons-suppliers .button-cancel{
+    background-color: rgb(244, 55, 55);
+    color: white;
+}
+
+.content-modal-edit .content-modal-container .content-buttons-suppliers .button-confirm{
+    background-color: rgb(74, 148, 245);
+    color: white;
+}
+
+.content-modal-edit .content-modal-container .content-buttons-suppliers .button-cancel:hover{
+    background-color: rgb(248, 35, 35);
+}
+
+.content-modal-edit .content-modal-container .content-buttons-suppliers .button-confirm:hover{
+    background-color: rgb(29, 120, 240);
+}
+
+.content-modal-edit .content-modal-container .content-buttons-suppliers .btn-modal {
     margin: 10px 5px;
     text-align: center;
     font-size: 16px;
